--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <div class="texto">
                     <h2>Enámorate del arte de las uñas</h2>
                     <h5 class="text-center">Dale alegría a tu vida con un nuevo esmalte...</h5> 
-                    <p id="first-text-header"> <strong id="Naf-header-text">Naf Studio</strong> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p> 
+                    <p id="first-text-header"> <strong id="Naf-header-text">Naf Studio</strong> HOLAAAAAit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p> 
                   </div>
                 </div>
 
