--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
                   <div class="texto">
                     <h2>Enámorate del arte de las uñas</h2>
                     <h5 class="text-center">Dale alegría a tu vida con un nuevo esmalte...</h5> 
-                    <p id="first-text-header"> <strong id="Naf-header-text">Naf Studio</strong> HOLAAAAAit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p> 
+                    <p id="first-text-header"> <strong id="Naf-header-text">Naf Studio</strong> Protege tus uñas naturales y alarga su tiempo con largas duraciones con nuestro servicio de Gel X<br>
+                    Con nuestro set de Acrílico evita el resquebrajamiento de tus uñas.<br>
+                  Y protege tus uñas con esmaltes de primera línea y altos estándares de calidad<br>
+                  <img src="img/main.jpg" alt="...">
+                </p> 
                   </div>
                 </div>
 
@@ -161,7 +165,9 @@
                 <div class="texto">
                   <h2>No subestimes el poder de unas pestañas perfectas</h2>
                   <h5 class="text-center">Atrapa con tu mirada, seduce con tus pestañas...</h5> 
-                  <p id="first-text-header"> <strong id="Naf-header-text">Glowing Up - Lashes & Brows</strong> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p> 
+                  <p id="first-text-header"> <strong id="Naf-header-text">Glowing Up - Lashes & Brows</strong> Protege tus uñas naturales y alarga su tiempo con largas duraciones con nuestro servicio de Gel X<br>
+                    Con nuestro set de Acrílico evita el resquebrajamiento de tus uñas.<br>
+                  Y protege tus uñas con esmaltes de primera línea y altos estándares de calidad<br></p> 
                 </div>
               </div>
 
