--- a/contactenos.html
+++ b/contactenos.html
@@ -78,6 +78,39 @@
       </div>
   </nav>
 
+
+  <div class="container" id="call_us">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-sm-12 col-sm-12 bg-light form-demo rounded mt-5">
+            <h1 class="text-center text-dark">Formulario de contacto</h1>
+            <h2 class="text-center text-secondary">con envío de adjuntos</h2>
+            <hr class="bg-light w-75">
+            <form action="https://formsubmit.co/cristopherivera14@gmail.com" method="post" id="formulario-ejemplo" class="w-75 mx-auto" 
+            enctype="multipart/form-data">
+                <div class="form-group">
+                    <input type="text" name="nombre" class="form-control bg-light" placeholder="Nombre" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" name="email" class="form-control bg-light" placeholder="email" required>
+                </div>
+                <div class="form-group">
+                    <input type="text" name="asunto" class="form-control bg-light" placeholder="Asunto" required>
+                </div>
+                <div class="form-group">
+                    <textarea name="mensaje" id="mensaje" class="form-control bg-light" placeholder="Mensaje" rows="4" required></textarea>
+                </div>
+                <div class="form-group">
+                    <input type="file" name="adjuntarArchivo" id="adjuntarArchivo" class="btn btn-secondary w-100">
+                </div>
+                <div class="form-group">
+                    <input type="submit" name="enviar" id="enviar" class="btn btn-primary btn-block" value="Enviar">
+                </div>
+            </form>
+        </div>
+    </div>
+  </div>
+
+
     <div id="map"></div>
 
     <script
