--- a/contactenos.html
+++ b/contactenos.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 
-    <script src="js/main.js"></script>
+    <script src="js/maps.js"></script>
     <link href="css/mainstyle.css" rel="stylesheet"/>
     <link href="css/contactenos.css" rel="stylesheet"/>
     <title>Naf Studio CR</title>
@@ -162,10 +162,6 @@
         </div>
     </footer><!-- End Footer -->
 
-    <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5GAuxhYEUVuLT0ZybCE2pRWWmE0-_RbI&callback=initMap&v=weekly"
-    defer
-    ></script>
-    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5GAuxhYEUVuLT0ZybCE2pRWWmE0-_RbI&callback=initMap&v=weekly" defer></script>
 </body>
 </html>
