--- a/index.html
+++ b/index.html
@@ -165,9 +165,8 @@
                 <div class="texto">
                   <h2>No subestimes el poder de unas pestañas perfectas</h2>
                   <h5 class="text-center">Atrapa con tu mirada, seduce con tus pestañas...</h5> 
-                  <p id="first-text-header"> <strong id="Naf-header-text">Glowing Up - Lashes & Brows</strong> Protege tus uñas naturales y alarga su tiempo con largas duraciones con nuestro servicio de Gel X<br>
-                    Con nuestro set de Acrílico evita el resquebrajamiento de tus uñas.<br>
-                  Y protege tus uñas con esmaltes de primera línea y altos estándares de calidad<br></p> 
+                  <p id="first-text-header"> <strong id="Naf-header-text">Glowing Up - Lashes & Brows</strong> Añade volumen y densidad a las pestañas naturales, escasas o poco pobladas.<br>
+                  Ayuda a eliminar la expresión de cansancio en tu rostro y rejuvenece la mirada</p> 
                 </div>
               </div>
 
