--- a/nosotros.html
+++ b/nosotros.html
@@ -123,7 +123,7 @@
             <div class="head">
               <div class="circle"></div>
               <div class="img">
-                <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
+                <img src="img/valeria.jpg" alt="">
               </div>
             </div>
             <div class="description">
