--- a/nosotros.html
+++ b/nosotros.html
@@ -115,7 +115,7 @@
               <p>Certificada.</p>
             </div>
             <div class="contact">
-              <a href="#">Contácto</a>
+              <a href="https://api.whatsapp.com/send?phone=50672642145&text=Hola!%20Me%20gustar%C3%ADa%20agendar%20una%20cita%20para%20">Contácto</a>
             </div>
           </div>
 
@@ -132,7 +132,7 @@
               <p>Certificada.</p>
             </div>
             <div class="contact">
-              <a href="#">Contácto</a>
+              <a href="https://api.whatsapp.com/send?phone=50672642145&text=Hola!%20Me%20gustar%C3%ADa%20agendar%20una%20cita%20para%20">Contácto</a>
             </div>
           </div>
 
@@ -149,7 +149,7 @@
               <p>Certificada.</p>
             </div>
             <div class="contact">
-              <a href="#">Contácto</a>
+              <a href="https://api.whatsapp.com/send?phone=50685301281&text=Hola%2C%20me%20gustar%C3%ADa%20agendar%20una%20cita%20">Contácto</a>
             </div>
           </div>
 
@@ -166,7 +166,7 @@
            
             </div>
             <div class="contact">
-              <a href="#">Contácto</a>
+              <a href="https://api.whatsapp.com/send?phone=50672642145&text=Hola!%20Me%20gustar%C3%ADa%20agendar%20una%20cita%20para%20">Contácto</a>
             </div>
           </div>
         </div>
